--- a/translations/texts/items/armors/biome/Bioluminescence/frostcrown/frostcrown.head.json
+++ b/translations/texts/items/armors/biome/Bioluminescence/frostcrown/frostcrown.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frost Crown"
+      "Eng": "Frost Crown",
+      "Por": "Coroa de Gelo"
     }
   }
 ]
