--- a/translations/texts/items/armors/biome/alpine/alpaca/alpaca.chest.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpaca.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Alpaca Sweater"
+      "Eng": "Alien Alpaca Sweater",
+      "Por": "Suéter de Alpaca Alienígena"
     }
   }
 ]
