--- a/translations/texts/items/armors/biome/alpine/alpaca/alpaca.head.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpaca.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Alpaca Mask"
+      "Eng": "Alien Alpaca Mask",
+      "Por": "Máscara de Alpaca Alienígena"
     }
   }
 ]
