--- a/translations/texts/items/armors/biome/alpine/alpaca/alpaca.legs.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpaca.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Alpaca Legs"
+      "Eng": "Alien Alpaca Legs",
+      "Por": "Pernas de Alpaca Alienígena"
     }
   }
 ]
