--- a/translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.chest.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpacavillager/alpacavillager.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alien Alpaca Real Torso"
+      "Eng": "Alien Alpaca Real Torso",
+      "Por": "Tronco de Alpaca Alienígena Real"
     }
   }
 ]
