--- a/translations/texts/items/armors/decorative/costumes/hunter/hunter.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/hunter/hunter.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hunter's Trousers"
+      "Eng": "Hunter's Trousers",
+      "Por": "Calças de Caçador"
     }
   }
 ]
