--- a/translations/texts/items/armors/decorative/costumes/jumpsuit/jumpsuit.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/jumpsuit/jumpsuit.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jump Suit Jacket"
+      "Eng": "Jump Suit Jacket",
+      "Por": "Jaqueta de Paraquedismo"
     }
   }
 ]
