--- a/translations/texts/items/armors/decorative/costumes/jumpsuit/jumpsuit.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/jumpsuit/jumpsuit.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jump Suit Trousers"
+      "Eng": "Jump Suit Trousers",
+      "Por": "Calças de Paraquedismo"
     }
   }
 ]
