--- a/translations/texts/items/armors/decorative/costumes/miner/miner.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/miner/miner.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "High-Vis Jacket"
+      "Eng": "High-Vis Jacket",
+      "Por": "Jaqueta de Alta Visibilidade"
     }
   }
 ]
