--- a/translations/texts/items/armors/decorative/costumes/miner/miner.head.json
+++ b/translations/texts/items/armors/decorative/costumes/miner/miner.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Miner's Helmet"
+      "Eng": "Miner's Helmet",
+      "Por": "Capacete do Mineiro"
     }
   }
 ]
