--- a/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.head.json
+++ b/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Moneybags Hat"
+      "Eng": "Moneybags Hat",
+      "Por": "Chapéu de Ricaço"
     }
   }
 ]
