--- a/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/moneybags/moneybags.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Moneybags Trousers"
+      "Eng": "Moneybags Trousers",
+      "Por": "Calças de Ricaço"
     }
   }
 ]
