--- a/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Holiday Coat"
+      "Eng": "Holiday Coat",
+      "Por": "Casaco Festivo"
     }
   }
 ]
