--- a/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.head.json
+++ b/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Holiday Beard Hat"
+      "Eng": "Holiday Beard Hat",
+      "Por": "Chapéu Festivo com Barba"
     }
   }
 ]
