--- a/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/mrclaus/mrclaus.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Holiday Trousers"
+      "Eng": "Holiday Trousers",
+      "Por": "Calças Festivas"
     }
   }
 ]
