--- a/translations/texts/items/armors/decorative/costumes/mutantminer/mutantminer.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/mutantminer/mutantminer.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mutant High-Vis Jacket"
+      "Eng": "Mutant High-Vis Jacket",
+      "Por": "Jaqueta Mutante de Alta Visibilidade"
     }
   }
 ]
