--- a/translations/texts/items/armors/decorative/costumes/penguin/penguin.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/penguin/penguin.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Suit Chest"
+      "Eng": "Penguin Suit Chest",
+      "Por": "Peitoral do Traje de Pinguim"
     }
   }
 ]
