--- a/translations/texts/items/armors/decorative/costumes/penguin/penguin.head.json
+++ b/translations/texts/items/armors/decorative/costumes/penguin/penguin.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Suit Mask"
+      "Eng": "Penguin Suit Mask",
+      "Por": "Máscara do Traje de Pinguim"
     }
   }
 ]
