--- a/translations/texts/items/armors/decorative/costumes/penguin/penguin.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/penguin/penguin.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Suit Legs"
+      "Eng": "Penguin Suit Legs",
+      "Por": "Pernas do Traje de Pinguim"
     }
   }
 ]
