--- a/translations/texts/items/armors/decorative/costumes/pirate/pirate.back.json
+++ b/translations/texts/items/armors/decorative/costumes/pirate/pirate.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pirate Barrel"
+      "Eng": "Pirate Barrel",
+      "Por": "Barril Pirata"
     }
   }
 ]
