--- a/translations/texts/items/armors/decorative/costumes/pirate/pirate.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/pirate/pirate.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pirate Jacket"
+      "Eng": "Pirate Jacket",
+      "Por": "Jaqueta de Pirata"
     }
   }
 ]
