--- a/translations/texts/items/armors/decorative/costumes/pirate/pirate.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/pirate/pirate.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pirate Pantaloons"
+      "Eng": "Pirate Pantaloons",
+      "Por": "Pantalonas de Pirata"
     }
   }
 ]
