--- a/translations/texts/items/armors/decorative/costumes/pixelhero/pixelhero.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/pixelhero/pixelhero.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pixel Hero Shirt"
+      "Eng": "Pixel Hero Shirt",
+      "Por": "Camisa de Herói Pixel"
     }
   }
 ]
