--- a/translations/texts/items/armors/decorative/costumes/predatory/predatory.back.json
+++ b/translations/texts/items/armors/decorative/costumes/predatory/predatory.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Predatory Back"
+      "Eng": "Predatory Back",
+      "Por": "Asas Predatórias"
     }
   }
 ]
