--- a/translations/texts/items/armors/decorative/costumes/predatory/predatory.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/predatory/predatory.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Predatory Trousers"
+      "Eng": "Predatory Trousers",
+      "Por": "Calças Predatórias"
     }
   }
 ]
