--- a/translations/texts/items/armors/decorative/costumes/premier/premier.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/premier/premier.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Premier Chestpiece"
+      "Eng": "Premier Chestpiece",
+      "Por": "Peitoral Premier"
     }
   }
 ]
