--- a/translations/texts/items/armors/decorative/costumes/premier/premier.head.json
+++ b/translations/texts/items/armors/decorative/costumes/premier/premier.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Premier Helmet"
+      "Eng": "Premier Helmet",
+      "Por": "Capacete Premier"
     }
   }
 ]
