--- a/translations/texts/items/armors/decorative/costumes/premier/premier.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/premier/premier.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Premier Greaves"
+      "Eng": "Premier Greaves",
+      "Por": "Grevas Premier"
     }
   }
 ]
