--- a/translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/rainbowood/rainbowwood.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rainbow Wood Shirt"
+      "Eng": "Rainbow Wood Shirt",
+      "Por": "Camisa de Madeira Arco-íris"
     }
   }
 ]
