--- a/translations/texts/items/armors/decorative/costumes/scientist/scientist.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/scientist/scientist.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Scientist Coat"
+      "Eng": "Scientist Coat",
+      "Por": "Casaco de Cientista"
     }
   }
 ]
