--- a/translations/texts/items/armors/decorative/costumes/scientist/scientist.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/scientist/scientist.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Scientist Pants"
+      "Eng": "Scientist Pants",
+      "Por": "Calças de Cientista"
     }
   }
 ]
