--- a/translations/texts/items/armors/decorative/costumes/shirt/shirt.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/shirt/shirt.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shirt Top"
+      "Eng": "Shirt Top",
+      "Por": "Camisa com Gravata"
     }
   }
 ]
