--- a/translations/texts/items/armors/decorative/costumes/smart/smart.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/smart/smart.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Smart Skirt"
+      "Eng": "Smart Skirt",
+      "Por": "Saia Elegante"
     }
   }
 ]
