--- a/translations/texts/items/armors/decorative/costumes/startrack/startrack.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/startrack/startrack.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Space Uniform Top"
+      "Eng": "Space Uniform Top",
+      "Por": "Top do Uniforme Espacial"
     }
   }
 ]
