--- a/translations/texts/items/armors/decorative/costumes/startrack/startrack.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/startrack/startrack.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Space Uniform Trousers"
+      "Eng": "Space Uniform Trousers",
+      "Por": "Calças do Uniforme Espacial"
     }
   }
 ]
