--- a/translations/texts/items/armors/decorative/costumes/strap/strap.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/strap/strap.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Strap Chest"
+      "Eng": "Strap Chest",
+      "Por": "Peitoral de Alças"
     }
   }
 ]
