--- a/translations/texts/items/armors/decorative/costumes/strap/strap.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/strap/strap.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Strap Legs"
+      "Eng": "Strap Legs",
+      "Por": "Calças de Alças"
     }
   }
 ]
