--- a/translations/texts/items/armors/decorative/costumes/summer/summer.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/summer/summer.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Summer Dress"
+      "Eng": "Summer Dress",
+      "Por": "Vestido de Verão"
     }
   }
 ]
