--- a/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.chest.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Elegant Wedding Top"
+      "Eng": "Elegant Wedding Top",
+      "Por": "Top de Casamento Elegante"
     }
   }
 ]
