--- a/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.head.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding2/wedding2.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wedding Veil"
+      "Eng": "Wedding Veil",
+      "Por": "Véu de Noiva"
     }
   }
 ]
