--- a/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/wedding1/wedding1.legs.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Elegant Wedding Skirt",
-      "Por": "Saia de Casamento Elegante"
+      "Por": "Saia de Noiva Elegante"
     }
   }
 ]
