--- a/translations/texts/items/armors/decorative/costumes/wizard/wizard.back.json
+++ b/translations/texts/items/armors/decorative/costumes/wizard/wizard.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Magic Scroll"
+      "Eng": "Magic Scroll",
+      "Por": "Pergaminho Mágico"
     }
   }
 ]
