--- a/translations/texts/items/armors/decorative/costumes/wizard/wizard.head.json
+++ b/translations/texts/items/armors/decorative/costumes/wizard/wizard.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wizard Hat"
+      "Eng": "Wizard Hat",
+      "Por": "Chapéu de Mago"
     }
   }
 ]
