--- a/translations/texts/items/armors/decorative/costumes/wizard/wizard.legs.json
+++ b/translations/texts/items/armors/decorative/costumes/wizard/wizard.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wizard Robe Bottoms"
+      "Eng": "Wizard Robe Bottoms",
+      "Por": "Parte Inferior da Túnica de Mago"
     }
   }
 ]
