--- a/translations/texts/items/armors/decorative/hats/banana/banana.head.json
+++ b/translations/texts/items/armors/decorative/hats/banana/banana.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Banana Mask"
+      "Eng": "Banana Mask",
+      "Por": "Máscara de Banana"
     }
   }
 ]
