--- a/translations/texts/items/armors/decorative/hats/bandithat2/bandithat2.head.json
+++ b/translations/texts/items/armors/decorative/hats/bandithat2/bandithat2.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bandit's Hood"
+      "Eng": "Bandit's Hood",
+      "Por": "Capuz de Bandido"
     }
   }
 ]
