--- a/translations/texts/items/armors/decorative/hats/bev/bev.head.json
+++ b/translations/texts/items/armors/decorative/hats/bev/bev.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Brewmaster Hat"
+      "Eng": "Brewmaster Hat",
+      "Por": "Chapéu de Mestre Cervejeiro"
     }
   }
 ]
