--- a/translations/texts/items/armors/decorative/hats/bunny/bunny.head.json
+++ b/translations/texts/items/armors/decorative/hats/bunny/bunny.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bunny Hat"
+      "Eng": "Bunny Hat",
+      "Por": "Chapéu de Coelho"
     }
   }
 ]
