--- a/translations/texts/items/armors/decorative/hats/captainscap/captainscap.head.json
+++ b/translations/texts/items/armors/decorative/hats/captainscap/captainscap.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Captain's Cap"
+      "Eng": "Captain's Cap",
+      "Por": "Boné do Capitão"
     }
   }
 ]
