--- a/translations/texts/items/armors/decorative/hats/cardboard/cardboard.head.json
+++ b/translations/texts/items/armors/decorative/hats/cardboard/cardboard.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cardboard Hat"
+      "Eng": "Cardboard Hat",
+      "Por": "Chapéu de Papelão"
     }
   }
 ]
